# Microsoft

./: .gitignore  Purview  Purview.md  README.md
.github/workflows/: fabric.yaml  purview.yaml  sharepoint.yml
Entra/: AD.md  README.md  custom-apps.md  service-account.md  service-principal.md  sop.md
FastTrack/: README.md
fabric/: OneLake.md  README.md  ci.md  lakehouse.md  price.md  security.md  warehouse.md  workspace.md
fabric/Pipelines/: README.md
fabric/Pipelines/activities/: CopyData.md
fabric/cli/: capacity.ps1  enable.run
fabric/factory/: README.md
fabric/factory/pipeline/: README.md
fabric/flow/: README.md
fabric/py/: README.md  pyproject.toml
fabric/py/davidkhala/microsoft/fabric/mgmt/: __init__.py
fabric/py/tests/: mgmt_test.py  test_.py
fabric/real-time/: README.md
fabric/spark/: README.md  optimize.md
fabric/spark/notebook/: README.md
fabric/warehouse/: README.md  ingestion.md  security.md
graph/: README.md
m365/excel/py/: README.md  pyproject.toml
m365/excel/py/davidkhala/microsoft/excel/: raw.py
m365/excel/py/tests/: pyxl_test.py
m365/excel/py/tests/fixtures/: SS_item_hierarchy.xlsx
purview/: README.md  catelog.md  lineage.md  permission.md  pricing.md  quality.md  region.md  scan.md
purview/api/: README.md
purview/api/nodejs/: README.md  account.js  data-map.js  index.js  interface.js  lineage.js  package.json  scan.js  types.js
purview/api/nodejs/format/: const.js  reduce.js
purview/api/nodejs/test/: index.js  lineage.js  scan.js  types.js
purview/api/py/: README.md  const.py  pyproject.toml
purview/api/py/catalog/: __init__.py  entity.py
purview/api/py/davidkhala/microsoft/purview/lineage/: __init__.py
purview/api/py/davidkhala/purview/: __init__.py  databricks.py  entity.py  relationship.py
purview/api/py/davidkhala/purview/databricks/: __init__.py
purview/api/py/davidkhala/purview/fabric/: powerbi.py
purview/api/py/davidkhala/purview/lineage/: __init__.py  databricks.py
purview/api/py/davidkhala/purview/lineage/databricks/: __init__.py  notebook.py
purview/api/py/davidkhala/purview/lineage/weaver/: powerbi.py
purview/api/py/davidkhala/purview/scan/: __init__.py
purview/api/py/test/: catalog_test.py  lineage_test.py  main_test.py  scan_test.py
purview/api/py/tests/: lineage_test.py  main_test.py
purview/cli/: bash.sh  enable.run
purview/lineage/: README.md  customize.md  databricks.md  databricks.sql  demo.sh  troubleshoot.sql
purview/lineage/api/: README.md
purview/lineage/api/nodejs/: index.js  lineage.js  package.json  types.js
purview/lineage/api/nodejs/test/: index.js
purview/lineage/databricks/: index.ipynb  setup.sh  troubleshoot.sql
purview/lineage/palsa/: .gitignore  Custom_Types.json  README.md  cleanup.sh  common.sh  demo-context.sh  demo.sh  standalone.sh  user.sh
purview/nodejs/: README.md  data-map.js  interface.js  package.json
purview/nodejs/test/: index.js  lineage.js
purview/permission/: README.md  mssql.sql
purview/permission/mssql/: clean.sql  setup.sql
purview/py/: .gitignore  build.py  cli.py  pyproject.toml
purview/py/davidkhala/microsoft/purview/: __init__.py
purview/py/davidkhala/microsoft/purview/databricks/: __init__.py  cli.py  lineage.py
purview/py/davidkhala/microsoft/purview/fabric/: powerbi.py
purview/py/davidkhala/microsoft/purview/lineage/weaver/: powerbi.py
purview/py/davidkhala/microsoft/purview/scan/: __init__.py
purview/py/tests/: cmd.ps1  lineage_test.py  main_test.py  scan_test.py  test.ps1
purview/py/tests/lineage/: databricks_test.py  lineage_test.py
sharepoint/: README.md
sharepoint/SPFx/: README.md
sharepoint/SPFx/AppCustomizer/: .yo-rc.json  README.md  package-lock.json  package.json
sharepoint/SPFx/AppCustomizer/config/: package-solution.json  serve.json
sharepoint/SPFx/AppCustomizer/sharepoint/assets/: ClientSideInstance.xml  elements.xml
sharepoint/SPFx/AppCustomizer/src/extensions/appCustomizer/: AppCustomizerApplicationCustomizer.manifest.json  AppCustomizerApplicationCustomizer.ts
sharepoint/py/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_connector.py
sharepoint/py/davidkhala/sharepoint/: __init__.py  drive.py  http.py  site.py
sharepoint/py/davidkhala/sharepoint/sink/: base.py  cos.py  s3.py
sharepoint/py/tests/: sharepoint_test.py
