[project]
name = "davidkhala.microsoft.fabric"
version = "0.0.0"
description = ""
authors = [{ name = "david-khala@hotmail.com" }]
requires-python = ">=3.12, <4.0"
readme = "README.md"
dependencies = ["azure-mgmt-fabric"]

[dependency-groups]
dev = ["davidkhala-azure"]

[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
