[project]
name = "davidkhala.microsoft.purview"
version = "0.0.0"
description = ""
authors = [{ name = "David Liu", email = "david-khala@hotmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "azure-identity",
    "azure-purview-catalog",
    "davidkhala-azure",
]

[project.optional-dependencies]
scan = ["azure-purview-scanning"]
databricks = ["davidkhala-databricks"]

[project.scripts]
build = "cli:build"
clean = "cli:clean"

[dependency-groups]
dev = [
    "pytest",
    "davidkhala-utils[build]",
]

[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
