[project]
name = "davidkhala.sharepoint"
version = "0.0.0"
description = "Microsoft SharePoint"
authors = [{ name = "David Liu" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "office365-rest-python-client",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

