[tool.poetry]
name = "davidkhala.purview"
version = "0.0.0"
description = ""
authors = ["David Liu <david-khala@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
azure-identity = "*"
azure-purview-catalog = "*"

[tool.poetry.group.dev.dependencies]
davidkhala-utils = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
