[tool.poetry]
name = "davidkhala.purview"
version = "0.0.3"
description = ""
authors = ["David Liu <david-khala@hotmail.com>"]
readme = "README.md"
packages = [{ include = "davidkhala" }]

[tool.poetry.dependencies]
python = "^3.12"
azure-identity = "*"
azure-purview-catalog = "*"
# for extras
azure-purview-scanning = { version = "*", optional = true }
davidkhala-utils = "*"


[tool.poetry.group.dev.dependencies]
davidkhala-databricks = { version = "*", extras = ["connect"] }


[tool.poetry.extras]
scan = ["azure-purview-scanning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
